--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.logo {
+  margin-bottom:70px;
+  margin-top:100px;
+}
+
 .copyright {
   position:fixed;
   bottom:0;
@@ -36,4 +41,35 @@
 
 .hidden {
   display:none;
+}
+
+.anagram-oldsearch-row {
+  height:45px;
+  overflow:hidden;
+}
+
+.anagram-form-row.fixed-input {
+  top:30px;
+  position:fixed;
+}
+
+.anagram-oldsearch-row.fixed-input {
+  top:80px;
+  position:fixed;
+}
+
+.block-white {
+  top:0;
+  width:100%;
+  position:fixed;
+  height:150px;
+  background:#FFFFFF;
+  display:none;
+}
+
+.results-table {
+  margin-top:20px;
+}
+.results-table.active {
+  margin-top:194px;
 }
