--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,13 @@
 .results-table.active {
   margin-top:194px;
 }
+
+.input-append input {
+  height:45px;
+  font-size:30px;
+  line-height:35px;
+}
+
+.input-append button {
+  height:55px;
+}
